--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asef's Aspiration</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+
+<body class="font">
+    <header class="head">
+        <div>
+            <img class="banner-image" src="assets/Group.png" alt="Image">
+        </div>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
+                <p class="banner-description regular-font">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.
+                </p>
+                <button class="btn-primary"><a href="#go-to-footer">Contact with me</a></button>
+            </div>
+        </div>
+    </header>
     
+    <!-- Why Web Development?? part -->
+     <main>
+        <section>
+            <h2>Why Web Development??</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+
+
+
+
+
+        </section>
+
+        <!-- My Inspiration -->
+        <section>
+            <h2>My Inspiration</h2>
+
+
+
+        </section>
+
+
+
+
+
+     </main>
+
+     <!-- footer -->
+      <footer id="go-to-footer">abc
+
+      </footer>
 </body>
 </html>
