Added two section

--- a/index.html
+++ b/index.html
@@ -16,32 +16,102 @@
             <div class="banner-content">
                 <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
                 <p class="banner-description regular-font">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.
+                    A few years back, I suddenly got an interest in learning HTML and CSS. However, due to many reasons, I wasn't able to go much further. I had to quit on the mid-path!<br>Past is Past! Now I want to change the present for a better future, and with a new zeal and aspiration, I have restarted learning HTML and CSS not only because of my attraction towards them but for the sole purpose of becoming a web developer shortly, In shaa Allaah.
                 </p>
-                <button class="btn-primary"><a href="#go-to-footer">Contact with me</a></button>
+                <button class="btn-primary"><a class="btn-color" href="#go-to-footer">Contact with me</a></button>
             </div>
         </div>
     </header>
     
-    <!-- Why Web Development?? part -->
+
+
+    
      <main>
-        <section>
-            <h2>Why Web Development??</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <!-- Why Web Development?? part -->
+        <section class="reasons-to-choose-webdev">
+            <div>
+                <h2 class="section-header">Why Web Development??</h2>
+                <p class="section-description regular-font"> The only reason I have opted for Web Development is because I am increasingly interested in building new websites from the very beginning. I love the transformation and manifestation of languages/codes into websites. </p>
+            </div>
+            <div class="dream-container">
+                <div class="dream1 text">
+                    <h4 class="dream-header">I will Do Coding and Change The World</h4>
+                    <p class="p-description">In shaa Allaah, I hope and believe that with firm determination, perseverance, and support I will be able to learn advanced coding and change the world for a better tomorrow.</p>
+                    <button class="btn-learn-more">Learn more</button>
+                </div>
+                <div>
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </div>
 
+            <div class="dream-container">
+                <div>
+                    <img class="" src="assets/Group 3.png" alt="">
+                </div>
+                <div class="dream2 text">
+                    <h4 class="dream-header">I will help People by creating Modern Web System</h4>
+                    <p class="p-description">If I am able to grasp the languages and software related to web development, I will try to assist people in creating modern web system, In Shaa Allaah.</p>
+                    <button class="btn-learn-more">Learn more</button>
+                </div>
+            </div>
 
-
-
-
+            <div class="dream-container">
+                <div class="dream3 text">
+                    <h4 class="dream-header">I will Do Coding and Change The World</h4>
+                    <p class="p-description">In shaa Allaah, I hope and believe that with firm determination, perseverance, and support I will be able to learn advanced coding and change the world for a better tomorrow.</p>
+                    <button class="btn-learn-more">Learn more</button>
+                </div>
+                <div>
+                    <img class="" src="assets/Group 4.png" alt="">
+                </div>
+            </div>
         </section>
+
+
 
         <!-- My Inspiration -->
-        <section>
-            <h2>My Inspiration</h2>
-
-
-
+        <section class="my-inspiration">
+            <div class="inspiration-container">
+            <h2 class="section-header">My Inspiration</h2>
+            <p class="section-description">Jhankar Mahbub brother is my biggest inspiration. I loved how he changed his career and followed his dreams. Graduating from the IPE department of BUET, JK Bhai’s track change to coding and teaching really intrigued me and resumed my lost interest. </p>
+            </div>
+            <div class>
+                <iframe class="border" width="1076" height="550" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=hDoj1y_qH7rePjzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
+
+
+        <!-- My current Target -->
+         <section class="my-current-target">
+             <div class="inspiration-container">
+                <h2 class="section-header">My Current Target</h2>
+                <p class="section-description">My primary focus is to learn the basics of HTML, CSS, and Javascript, and once I become able to understand and deploy the languages to create meaningful websites, I want to go to the next level.</p>
+                </div>
+
+                <div class="target-container">
+                <div class="target1">
+                    <img src="assets/html.png" alt="Icon of html">
+                    <h3 class="target-title">HTML</h3>
+                    <p class="target-description">HTML is a markup language that defines the structure of your content. </p>
+                </div>
+                <div class="target2">
+                    <img src="assets/css.png" alt="Icon of css">
+                    <h3 class="target-title">Node.js</h3>
+                    <p class="target-description">CSS is a style sheet language. CSS is what we use to selectively style HTML elements.</p>
+                </div>
+                <div class="target3">
+                    <img src="assets/js.png" alt="Icon of JS">
+                    <h3 class="target-title">MongoDB</h3>
+                    <p class="target-description">JavaScript is a powerful programming language that can add interactivity to a website.</p>
+                </div>
+                </div>
+             </div>
+
+
+
+
+
+         </section>
 
 
 
