--- a/index.html
+++ b/index.html
@@ -93,16 +93,19 @@
                     <img src="assets/html.png" alt="Icon of html">
                     <h3 class="target-title">HTML</h3>
                     <p class="target-description">HTML is a markup language that defines the structure of your content. </p>
+                    <a class="Learn" href="">Learn More</a>
                 </div>
                 <div class="target2">
                     <img src="assets/css.png" alt="Icon of css">
                     <h3 class="target-title">Node.js</h3>
                     <p class="target-description">CSS is a style sheet language. CSS is what we use to selectively style HTML elements.</p>
+                    <a class="Learn" href="">Learn More</a>
                 </div>
                 <div class="target3">
                     <img src="assets/js.png" alt="Icon of JS">
                     <h3 class="target-title">MongoDB</h3>
                     <p class="target-description">JavaScript is a powerful programming language that can add interactivity to a website.</p>
+                    <a class="Learn" href="">Learn More</a>
                 </div>
                 </div>
              </div>
@@ -114,13 +117,33 @@
          </section>
 
 
-
-
-
+         <!-- I need support -->
+          <section class="ineedsupport">
+            <div>
+                <h3 class="section-header">I need Support</h3>
+                <p class="section-description">As always, the support from Allaah is the most important support I need. 
+                    From people, mental and inspirational support is expected. On a different note, anyone who is interested in equipping me with new techniques and tools related to Web development is always welcome, and may Allaah, the Almighty, grant him success in this world and hereafter. </p>
+            </div>
+            <div class="finalsection">
+            <input width="100px" class="btn-input" type="text" name="" id="" placeholder="Feedback Please">
+            <button class="btn-submit">Submit</button>
+            </div>
+          </section>
      </main>
 
      <!-- footer -->
-      <footer id="go-to-footer">abc
+      <footer id="go-to-footer">
+        <div>
+            <h4>An Open Commitment by Asef Mahmud</h4>
+        </div>
+        <div>
+            <a href=""><img src="assets/facebook.png" alt=""></a>
+            <a href=""><img src="assets/github.png" alt=""></a>
+            <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
+
+
+        
 
       </footer>
 </body>
