Changed the extra part above banner

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body class="font">
+    <section class="extra">
+    <div>
+        <h2 class="extra-font">Asef Mahmud</h2>
+    </div>
+    <div>
+        <button class="btn-resume">Download Resume</button>
+    </div>
+    </section>
+
     <header class="head">
+
         <div>
             <img class="banner-image" src="assets/Group.png" alt="Image">
         </div>
@@ -16,7 +26,7 @@
             <div class="banner-content">
                 <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
                 <p class="banner-description regular-font">
-                    A few years back, I suddenly got an interest in learning HTML and CSS. However, due to many reasons, I wasn't able to go much further. I had to quit on the mid-path!<br>Past is Past! Now I want to change the present for a better future, and with a new zeal and aspiration, I have restarted learning HTML and CSS not only because of my attraction towards them but for the sole purpose of becoming a web developer shortly, In shaa Allaah.
+                    A few years back, I suddenly got an interest in learning HTML and CSS. However, due to many reasons, I wasn't able to go much further. I had to quit on the mid-path! Past is Past! Now I want to change the present for a better future, and with a new zeal and aspiration, I have restarted learning HTML and CSS not only because of my attraction towards them but for the sole purpose of becoming a web developer shortly, In shaa Allaah.
                 </p>
                 <button class="btn-primary"><a class="btn-color" href="#go-to-footer">Contact with me</a></button>
             </div>
@@ -141,10 +151,6 @@
             <a href=""><img src="assets/github.png" alt=""></a>
             <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
-
-
-        
-
       </footer>
 </body>
 </html>
